Add all fractions for roles

--- a/pages/roles.html
+++ b/pages/roles.html
@@ -83,6 +83,53 @@
                     Подробнее <i class="fas fa-arrow-right"></i>
                 </a>
             </div>
+
+            <div class="card">
+                <img src="../resources/fractions/Hydra.png" width="128" height="128">
+                <h4>Гидра</h4>
+                <p>Одно из крупных и наиболее агрессивных «сверхгосударств» метро.</p>
+                <a href="fractions/tech.html" class="card-link">
+                    Подробнее <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <div class="card">
+                <img src="../resources/fractions/Reds_round.png" width="128" height="128">
+                <h4>Красная Линия</h4>
+                <p>Одно из крупных и наиболее агрессивных «сверхгосударств» метро.</p>
+                <a href="fractions/tech.html" class="card-link">
+                    Подробнее <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <div class="card">
+                <img src="../resources/fractions/Sparta_round.png" width="128" height="128">
+                <h4>Спарта</h4>
+                <p>Одно из крупных и наиболее агрессивных «сверхгосударств» метро.</p>
+                <a href="fractions/tech.html" class="card-link">
+                    Подробнее <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <div class="card">
+                <img src="../resources/fractions/VDNKh.png" width="128" height="128">
+                <h4>ВДНХ</h4>
+                <p>Одно из крупных и наиболее агрессивных «сверхгосударств» метро.</p>
+                <a href="fractions/tech.html" class="card-link">
+                    Подробнее <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <!-- TODO: Эта карточка будет по центру... Чтобы добавить новые и все располагалось нормально, зайдите в style.css и найдите там .content-grid .card:nth-child(7) -->
+            <div class="card">
+                <img src="../resources/fractions/Fist_green-red.png" width="128" height="128">
+                <h4>Атагонисты</h4>
+                <p>Различные мутанты, злодеи и прочие создания, что хотят усложнить вашу жизнь.</p>
+                <a href="fractions/tech.html" class="card-link">
+                    Подробнее <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
         </div>
     </main>
 
