исправления от coderabbitai

--- a/pages/others.html
+++ b/pages/others.html
@@ -17,7 +17,7 @@
     <!-- Основное содержимое -->
     <main class="container">
         <h3>Категории</h3>
-        <p>Описание категорий, в которых лежит полезная информаци.</p>
+        <p>Описание категорий, в которых лежит полезная информация.</p>
 
         <div class="content-grid">
             <a href="../others/npc_traders_sales.html" class="card">
